IDEA-173639 [followup] provide SVG images viewer
Fix URL for MS Windows.